@@ -223,32 +223,15 @@ endif
 # vendor and os determined when gnustep-make was configured.  The
 # reason using the hardcoded ones might be better is that config.guess
 # and similar scripts might even require compiling test files to
-# determine the platform - which is horribly slow.  To prevent this
-# problem, unless we were configured to determine the platform at run
-# time, by default we use the hardcoded values of GNUSTEP_HOST*.
+# determine the platform - which is horribly slow (that is done in
+# names.make if GNUSTEP_HOST is not yet set at that stage).  To
+# prevent this problem, unless we were configured to determine the
+# platform at run time, by default we use the hardcoded values of
+# GNUSTEP_HOST*.
 
 ifeq ("@GNUSTEP_MULTI_PLATFORM@","")
   GNUSTEP_HOST = @target@
   GNUSTEP_HOST_CPU = @clean_target_cpu@
   GNUSTEP_HOST_VENDOR = @clean_target_vendor@
   GNUSTEP_HOST_OS = @clean_target_os@
-else
- #
- # Determine the host information
- #
- ifeq ($(GNUSTEP_HOST),)
-  GNUSTEP_HOST := $(shell (cd /tmp; $(GNUSTEP_MAKEFILES)/config.sub `$(GNUSTEP_MAKEFILES)/config.guess`))
- endif
-
- ifeq ($(GNUSTEP_HOST_CPU),)
-  GNUSTEP_HOST_CPU := $(shell ($(GNUSTEP_MAKEFILES)/clean_cpu.sh `$(GNUSTEP_MAKEFILES)/cpu.sh $(GNUSTEP_HOST)`))
- endif
-
- ifeq ($(GNUSTEP_HOST_VENDOR),)
-  GNUSTEP_HOST_VENDOR := $(shell ($(GNUSTEP_MAKEFILES)/clean_vendor.sh `$(GNUSTEP_MAKEFILES)/vendor.sh $(GNUSTEP_HOST)`))
- endif
-
- ifeq ($(GNUSTEP_HOST_OS),)
-  GNUSTEP_HOST_OS := $(shell ($(GNUSTEP_MAKEFILES)/clean_os.sh `$(GNUSTEP_MAKEFILES)/os.sh $(GNUSTEP_HOST)`))
- endif
 endif
